# proxydetection

./: .gitignore  README.md  ansible-experiments.sh  ansible-playbook.sh  ansible.cfg  experiment.py  experiment.yml  experiment.yml.j2  inline.yml  main.py  pyproject.toml  rename.py  run.sh  setup.yml  start.yml  startall.sh  stop.yml  stopall.sh
commands/: fetch_and_empty.yml  pcap_start.yml  pcap_stop.yml
config/: 3proxy_default.cfg  squid_default.conf
experiments/: Readme.md  base_http1.yml  base_http1dns.yml  base_http2.yml  base_http3.yml  base_http3dns.yml  base_https1.yml  base_https1dns.yml  base_https2.yml  base_wss.yml
group_vars/: all.yml
inventory/: hosts.ini
pcaps/: client.pcap  proxy.pcap  server.pcap
proxydetect/: client.py  config.py  digitaloceanapi.py  experiment.py  machine.py  main.py  main2.py  main3.py  relay.py  server.py  vagrantapi.py
run/: Vagrantfile
server/: http1.py  http1_server.py  http2.py  http2_server.py  http3.py  https1.py  https1_server.py  https2.py  https3.py  tcp.py  websockets.py
test/: http1_client.pcap  http1_server.pcap  http1dns_client.pcap  http1dns_server.pcap  http2_client.pcap  http2_server.pcap  http2dns_client.pcap  http2dns_server.pcap  http3_client.pcap  http3_server.pcap  http3dns_client.pcap  http3dns_server.pcap  https1_client.pcap  https1_server.pcap  https1dns_client.pcap  https1dns_server.pcap  https2_client.pcap  https2_server.pcap  https2dns_client.pcap  https2dns_server.pcap  ws_client.pcap  ws_server.pcap
tmp/: task_definition_Fetch capture file relay.yml  task_definition_Kill the relay.yml  (+2 more)
(+3510 files in other folders)
