[tool.poetry]
name = "proxydetect"
version = "0.1.0"
description = ""
authors = ["miqsoft <mksaxhandball@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jinja2 = "^3.1.4"
click = "^8.1.7"
python-vagrant = "^1.0.0"
python-digitalocean = "^1.17.0"
python-dotenv = "^1.0.1"


[tool.poetry.scripts]
main = "proxydetect.:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
